--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "Onemark",
   "shortname": "Onemark",
   "version": "1.0.5",
-  "description": "Aggregate and manage browser working session",
+  "description": "Aggregate browser working session into a single manageable application",
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "index.html",
